--- a/loaddatalayout/build.gradle
+++ b/loaddatalayout/build.gradle
@@ -1,14 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
+
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
+
+    lintOptions {
+        abortOnError false
+    }
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 24
-        versionCode 1
-        versionName "1.0"
+        versionCode 101
+        versionName "1.0.1"
     }
     buildTypes {
         release {
@@ -23,3 +28,4 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
 }
+
