--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile project(':library')
+    compile project(':loaddatalayout')
 }
